# Maya-AI-copresentor

./: .gitignore  READMe.md  pyproject.toml  requirements.txt
mic_audio/: recorder.py
murf_asr/: murf_asr.py
pptx_module/: controller.py  create.py  parser.py  test.py  testbyai.py
