[project]
name = "maya"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.123.5",
    "murf>=2.2.4",
    "pyaudio>=0.2.14",
    "uvicorn>=0.38.0",
    "websocket>=0.2.1",
    "websockets>=15.0.1",
    "requests>=2.32.3",
    "dotenv>=0.9.9",
    "flask>=3.1.2",
    "colorama>=0.4.6",
    "pyannote-audio>=4.0.2",
]
